<resources>
    <string name="app_name">sec</string>
    <string name="hello">ПРИВЕТ</string>
    <string name="enjoy">Наслаждайся отборочными.</string>
    <string name="take_care">Будь внимателен.</string>
    <string name="make_good">Делай хорошо.</string>
    <string name="log_in_onboarding">Войти в аккаунт</string>
    <string name="dont_have_acc">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="sign_in_login">Sign in</string>
    <string name="email_login">Email</string>
    <string name="password_login">Пароль</string>
    <string name="sign_in_login_but">Sign in</string>
    <string name="register_login">Register</string>
    <string name="profile_login">Профиль</string>
    <string name="welcomeback">С возвращением, Эмиль!</string>
    <string name="howdoufeel">Каким ты себя ощущаешь сегодня?</string>
    <string name="exit">exit</string>
    <string name="Emil">Эмиль</string>
</resources>