<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_screen"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="348dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/logo" />

    <TextView
        style="@style/Textstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hello"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        style="@style/Textstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy" />

    <TextView
        style="@style/Textstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_care" />

    <TextView
        style="@style/Textstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_good" />

    <Button
        android:id="@+id/ToLogin"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_border"
        android:onClick="GoToLogin"
        android:text="@string/log_in_onboarding"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/dont_have_acc"
        android:textColor="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginBottom="0dp"
        android:background="@color/back_login" />


</LinearLayout>

