<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_login"
    android:orientation="vertical">


    <ImageView
        android:layout_width="153dp"
        android:layout_height="145dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/sign_in_login"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:hint="@string/email_login"
        android:textColorHint="@color/white" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:width="300dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/password_login"
        android:textColorHint="@color/white" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:width="300dp" />


    <Button
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_border"
        android:text="@string/sign_in_login_but"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/register_login"
        android:textColor="@color/white"

        />


    <Button
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:text="@string/profile_login"
        android:textColor="@color/white" />

</LinearLayout>